Pure refactor: move all GcProfile stuff to one file